# EVA

./: README.md
firmware/nucleo/: README.md  nucleov2.ino
firmware/raspberri Pi 4/src/: control_allocation.h
firmware/raspberri Pi 4/src/IMU/: WIT61P.h
firmware/raspberry Pi 4/: CMakeLists.txt  README.md  cmake_install.cmake
firmware/raspberry Pi 4/src/: PolePlacementControl.cpp  PolePlacementControl.h  control_allocation.cpp  main.cpp  main1.cpp  main_OK.cpp  main_nouvo controller.cpp  main_nuovo.cpp
firmware/raspberry Pi 4/src/IMU/: WIT61P.c  WIT61P.h
gui/: README.md
gui/modules/: __init__.py
gui/utils_rov/: controller.py  joystick.py
gui/utils_rov/config/: joystick_Move.yaml
gui/utils_rov/controller/: joystick.py
